Refactor docker_build_script

--- a/docker_build_script/Dockerfile
+++ b/docker_build_script/Dockerfile
@@ -3,48 +3,50 @@ FROM fedora:latest
 
 LABEL key="1.0"
 
+
+
 # 设置环境变量
 ENV Server_USER="oyzx" \
     TZ=Asia/Shanghai \
     Client_USER="ouyangzhaoxin"
 
-
-
 # 设置时区
 RUN echo $TZ > /etc/timezone && ln -snf /usr/share/zoneinfo/$TZ /etc/localtime
 
+# 设置中科大镜像
+RUN sed -e 's|^metalink=|#metalink=|g' \
+         -e 's|^#baseurl=http://download.example/pub/fedora/linux|baseurl=https://mirrors.ustc.edu.cn/fedora|g' \
+         -i.bak \
+         /etc/yum.repos.d/fedora.repo \
+         /etc/yum.repos.d/fedora-updates.repo
+
+RUN dnf makecache
+
 # 安装必要的软件
 RUN dnf update -y && \
-    dnf install -y \
-    sudo \
-    "C Development Tools and Libraries" \
+    dnf install -y  \
     openssh-server \
-    zsh \
-    pkg-config \
-    systemd \
     iproute \
     net-tools \
-    fd \
-    rg \
+    fd-find \
+    ripgrep \
     fzf \
-    make \
-    vim \
-    ruby \
-    nodejs \
-    cmake \
+    ninja-build \
     neovim \
-    procps-ng \
+    ruby \
+    cmake \
+    nodejs \
     iputils \
-    docker \
+    procps-ng \
     htop \
     traceroute \
+    fastfetch \
     tree \
-    fastfetch && \
+    zsh &&\
+    dnf group install -y "C Development Tools and Libraries" && \
     dnf clean all
 
-# 添加初始化脚本
-COPY init.sh /tmp/init.sh
-RUN chmod +x /init.sh
+
 
 # 设置 root 密码；创建用户 oyzx ；设置用户 oyzx 密码；设置用户 oyzx 无需 sudo 密码。
 RUN echo 'root:1' | chpasswd && \
@@ -53,7 +55,7 @@ RUN echo 'root:1' | chpasswd && \
     usermod -aG wheel $Server_USER && \
     echo "$Server_USER ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers
 
-# 配置 SSH 服务
+# 在容器中添加 SSH 「密钥」；允许客户端以 root 用户登陆容器
 RUN ssh-keygen -A && \
     echo 'PermitRootLogin yes' >> /etc/ssh/sshd_config && \
     echo 'PasswordAuthentication yes' >> /etc/ssh/sshd_config
