--- a/docker_build_script/ubuntu/Dockerfile_ubuntu
+++ b/docker_build_script/ubuntu/Dockerfile_ubuntu
@@ -8,19 +8,20 @@ LABEL key="1.0"
 ENV DEBIAN_FRONTEND=noninteractive
 
 # 设置时区环境变量
-ENV TZ=Asia/Shanghai 
+ENV TZ=Asia/Shanghai
 
 # 安装 tzdata 包并设置时区
-RUN apt-get update && apt-get install -y tzdata && \
-    ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone && \
-    dpkg-reconfigure --frontend noninteractive tzdata
+RUN apt-get update && apt-get install -y tzdata \
+    && ln -snf /usr/share/zoneinfo/$TZ /etc/localtime \
+    && echo $TZ > /etc/timezone \
+    && dpkg-reconfigure --frontend noninteractive tzdata
 
 # 设置中科大镜像为 Ubuntu 源
 RUN sed -i.bak -e 's|http://archive.ubuntu.com/ubuntu/|https://mirrors.ustc.edu.cn/ubuntu/|g' \
                -e 's|http://security.ubuntu.com/ubuntu|https://mirrors.ustc.edu.cn/ubuntu|g' \
                /etc/apt/sources.list
 
-# 安装软件包
+# 安装依赖的软件包
 RUN apt-get update && apt-get install -y \
     openssh-server \
     net-tools \
@@ -49,7 +50,34 @@ RUN apt-get update && apt-get install -y \
     golang \
     zip \
     software-properties-common \
-    valgrind
+    valgrind \
+    curl \
+    tar \
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# 清理缓存
-RUN apt-get clean && rm -rf /var/lib/apt/lists/*
+# 安装 fzf
+RUN git clone --depth 1 https://github.com/junegunn/fzf.git ~/.fzf \
+    && yes | ~/.fzf/install --no-update-rc
+
+# 安装 Kotlin/Native
+RUN ARCH=$(uname -m) && \
+    LATEST_VERSION=$(curl -s -L -I https://github.com/JetBrains/kotlin/releases/latest | grep -i location | sed -E 's/.*tag\/(v[0-9\.]+).*/\1/') && \
+    if [ "$ARCH" == "x86_64" ]; then \
+        DOWNLOAD_URL="https://github.com/JetBrains/kotlin/releases/download/$LATEST_VERSION/kotlin-native-prebuilt-linux-x86_64-${LATEST_VERSION#v}.tar.gz"; \
+        INSTALL_DIR="/opt/kotlin-native-linux-x86_64-$LATEST_VERSION"; \
+    elif [ "$ARCH" == "aarch64" ]; then \
+        DOWNLOAD_URL="https://github.com/JetBrains/kotlin/releases/download/$LATEST_VERSION/kotlin-native-prebuilt-linux-aarch64-${LATEST_VERSION#v}.tar.gz"; \
+        INSTALL_DIR="/opt/kotlin-native-linux-aarch64-$LATEST_VERSION"; \
+    else \
+        echo "Unsupported Linux architecture: $ARCH"; \
+        exit 1; \
+    fi && \
+    curl -sL "$DOWNLOAD_URL" | tar xz -C /opt
+
+# 设置 Kotlin/Native 环境变量
+ENV KOTLIN_NATIVE_HOME=/opt/kotlin-native
+
+# 安装 SDKMAN 和 Java
+RUN curl -s "https://get.sdkman.io" | bash \
+    && echo "source \"$HOME/.sdkman/bin/sdkman-init.sh\"" >> "$HOME/.bashrc" \
+    && bash -c "source $HOME/.sdkman/bin/sdkman-init.sh && sdk install java"
