--- a/docker_build_script/fedora/Dockerfile_fedora
+++ b/docker_build_script/fedora/Dockerfile_fedora
@@ -57,3 +57,26 @@ RUN dnf update -y && dnf install -y \
     openssl && \
     dnf group install -y "C Development Tools and Libraries" && \
     dnf clean all
+
+
+# 安装 Kotlin/Native
+RUN ARCH=$(uname -m) && \
+    LATEST_VERSION=$(curl -s -L -I https://github.com/JetBrains/kotlin/releases/latest | grep -i location | sed -E 's/.*tag\/(v[0-9\.]+).*/\1/') && \
+    if [ "$ARCH" == "x86_64" ]; then \
+        DOWNLOAD_URL="https://github.com/JetBrains/kotlin/releases/download/$LATEST_VERSION/kotlin-native-prebuilt-linux-x86_64-${LATEST_VERSION#v}.tar.gz"; \
+        INSTALL_DIR="/opt/kotlin-native-linux-x86_64-$LATEST_VERSION"; \
+    elif [ "$ARCH" == "aarch64" ]; then \
+        DOWNLOAD_URL="https://github.com/JetBrains/kotlin/releases/download/$LATEST_VERSION/kotlin-native-prebuilt-linux-aarch64-${LATEST_VERSION#v}.tar.gz"; \
+        INSTALL_DIR="/opt/kotlin-native-linux-aarch64-$LATEST_VERSION"; \
+    else \
+        echo "Unsupported Linux architecture: $ARCH" && exit 1; \
+    fi && \
+    (curl -s -o /dev/null -w "%{http_code}" "$DOWNLOAD_URL" | grep -q "200") && \
+    mkdir -p "$INSTALL_DIR" && \
+    curl -sL "$DOWNLOAD_URL" -o kotlin_native.tar.gz && \
+    tar -xzf kotlin_native.tar.gz -C "$INSTALL_DIR" --strip-components=1 && \
+    rm kotlin_native.tar.gz
+
+# 安装 SDKMAN 和 kotlin
+RUN curl -s "https://get.sdkman.io" | bash \
+    && bash -c "source $HOME/.sdkman/bin/sdkman-init.sh && sdk install kotlin"
