--- a/docker_build_script/ubuntu/Dockerfile
+++ b/docker_build_script/ubuntu/Dockerfile
@@ -51,7 +51,9 @@ RUN apt update && apt install -y \
     wget \
     pkg-config \
     graphviz \
-    sudo\
+    sudo \
+    wireshark \
+    tcpdump \
     kotlin \
     golang \
     rustc \
