update fedora && ubuntu  Dockerfile

--- a/docker_build_script/fedora/Dockerfile
+++ b/docker_build_script/fedora/Dockerfile
@@ -19,6 +19,7 @@ RUN dnf -y update && \
     glibc \
     glibc-common \
     openssh-server \
+    systemd \
     iproute \
     net-tools \
     fd-find \
