--- a/docker_build_script/fedora/Dockerfile
+++ b/docker_build_script/fedora/Dockerfile
@@ -54,6 +54,7 @@ RUN dnf -y update && \
     glibc-langpack-zh \
     jq \
     eza \
+    hyperfine \
     openssl && \
     dnf install -y --setopt=tsflags= coreutils coreutils-common man-pages man-db && \
     dnf group install -y --setopt=strict=0 "c-development" && \
