--- a/docker_build_script/fedora/Dockerfile
+++ b/docker_build_script/fedora/Dockerfile
@@ -55,6 +55,7 @@ RUN dnf -y update && \
     jq \
     eza \
     hyperfine \
+    zinit module build \
     openssl && \
     dnf install -y --setopt=tsflags= coreutils coreutils-common man-pages man-db && \
     dnf group install -y --setopt=strict=0 "c-development" && \
