--- a/docker_build_script/ubuntu/Dockerfile
+++ b/docker_build_script/ubuntu/Dockerfile
@@ -59,6 +59,7 @@ RUN apt update && apt install -y \
     tshark \
     eza \
     hyperfine \
+    autoconf \
     && apt clean && rm -rf /var/lib/apt/lists/*
 
 
