--- a/docker_build_script/ubuntu/Dockerfile
+++ b/docker_build_script/ubuntu/Dockerfile
@@ -1,7 +1,7 @@
 # 使用 Ubuntu 最新的 LTS 版本作为基础镜像
 FROM ubuntu:latest
 
-ENV TERM xterm-256color
+ENV TERM=xterm-256color
 # 为了避免交互式
 ENV AUTO_RUN="true"
 
