--- a/docker_build_script/fedora/Dockerfile
+++ b/docker_build_script/fedora/Dockerfile
@@ -5,8 +5,7 @@ ENV TERM=xterm-256color
 # 为了避免交互式
 ENV AUTO_RUN="true"
 
-
-RUN dnf update -y && dnf install -y curl sudo && dnf upgrade -y
+RUN dnf update -y && dnf upgrade -y && dnf install -y curl sudo
 
 # 拷贝 init.sh
 COPY ./init.sh /tmp/
